# 2024-project-qualtrics-survey

./: README.md  pyproject.toml
resources/: random_survey.csv  survey_column_mapping.csv
scripts/: load_survey.py  survey_simulation.py  yankee_swap.py
src/qsurvey/: __init__.py  parser.py
